# IoC

./: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
include/: Container.h  Framework.h
